--- a/alurapic/src/app/errors/not-found/not-found.component.html
+++ b/alurapic/src/app/errors/not-found/not-found.component.html
@@ -1,10 +1,9 @@
 <div class="text-center" style="background-color:#ededed">
-  <h2>This page is not avaliable</h2>
+  <h2>Esta página não está disponível</h2>
   <p>
-      The link you have acccessed may be broken or
-      the page may have ben removed.
+    O link que você acessou pode estar quebrado ou a página pode ter sido removida.
   </p>
   <p>
-    <img src="https://cdn.dribbble.com/users/2272148/screenshots/6633933/daily008.gif" alt="">
+    <img src="../../../assets/images/john_travolta_404_lost_your_page.gif" alt="">
   </p>
 </div>
