--- a/alurapic/src/app/photos/photo-list/photos/photos.component.html
+++ b/alurapic/src/app/photos/photo-list/photos/photos.component.html
@@ -1,4 +1,8 @@
-<ol class="list-unstyled row">
+<p class="text-center text-muted" *ngIf="!photos.length">
+  Desculpe, sem fotos
+    <img src="../../../../assets/images/john_travolta_lost.gif" alt="">
+</p>
+<ol class="list-unstyled">
   <li *ngFor="let cols of rows" class="row">
     <div *ngFor="let photo of cols" class="col-4">
       <ap-photo
